--- a/_sources/d_geosciences/Fluid_Dynamics/Lecture8_Part1_Navier_Stoke_Equation.ipynb
+++ b/_sources/d_geosciences/Fluid_Dynamics/Lecture8_Part1_Navier_Stoke_Equation.ipynb
@@ -389,91 +389,98 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\sigma_{xx}=2\\mu\\frac{du}{dx}$$(equation17)"
+    "$$\\sigma_{xx}=2\\mu\\frac{du}{dx}$$(equation8_17)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\sigma_{yy}=2\\mu\\frac{dv}{dy}$$(equation18)"
+    "$$\\sigma_{yy}=2\\mu\\frac{dv}{dy}$$(equation8_18)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\sigma_{zz}=2\\mu\\frac{dw}{dz}$$(equation19)"
+    "$$\\sigma_{zz}=2\\mu\\frac{dw}{dz}$$(equation8_19)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\tau_{xy}=\\tau_{yx}=\\mu(\\frac{du}{dy}+\\frac{dv}{dx})$$(equation20)"
+    "$$\\tau_{xy}=\\tau_{yx}=\\mu(\\frac{du}{dy}+\\frac{dv}{dx})$$(equation8_20)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\tau_{yz}=\\tau_{zy}=\\mu(\\frac{dw}{dy}+\\frac{dv}{dz})$$(equation21)"
+    "$$\\tau_{yz}=\\tau_{zy}=\\mu(\\frac{dw}{dy}+\\frac{dv}{dz})$$(equation8_21)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\tau_{xz}=\\tau_{zx}=\\mu(\\frac{dw}{dx}+\\frac{du}{dz})$$(equation22) where $w$ is the z-direction velocity."
+    "$$\\tau_{xz}=\\tau_{zx}=\\mu(\\frac{dw}{dx}+\\frac{du}{dz})$$(equation8_22)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, if we plug in equations {eq}`equation17`, {eq}`equation20` and {eq}`equation22` into the equation {eq}`equation9`, we find that the viscous forces in the x-directions per unit volume of the element is, for constant viscosity,"
+    " where $w$ is the z-direction velocity."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$2\\mu\\frac{\\delta^2u}{\\delta x^2}+\\mu(\\frac{\\delta^2 u}{\\delta y^2}+\\frac{\\delta^2v}{\\delta x \\delta y}+\\frac{\\delta^2 w}{\\delta x \\delta z}+\\frac{\\delta^2 u}{\\delta z^2})$$ (equation23)"
+    "Finally, if we plug in equations {eq}`equation8_17`, {eq}`equation8_20` and {eq}`equation8_22` into the equation {eq}`equation8_9`, we find that the viscous forces in the x-directions per unit volume of the element is, for constant viscosity,"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "All of these expressions can be further simplified by substituting the continuity equation {eq}`equation20` differentiated wrt. $x$."
+    "$$2\\mu\\frac{\\delta^2u}{\\delta x^2}+\\mu(\\frac{\\delta^2 u}{\\delta y^2}+\\frac{\\delta^2v}{\\delta x \\delta y}+\\frac{\\delta^2 w}{\\delta x \\delta z}+\\frac{\\delta^2 u}{\\delta z^2})$$ (equation8_23)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\frac{du}{dx}+\\frac{dv}{dy}+\\frac{dw}{dz}=0$$ (equation24)"
+    "All of these expressions can be further simplified by substituting the continuity equation {eq}`equation8_20` differentiated wrt. $x$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\frac{d^2u}{dx^2}=-\\frac{d^2v}{dydx}-\\frac{d^2 w}{dz dx}$$ (equation25)"
+    "$$\\frac{du}{dx}+\\frac{dv}{dy}+\\frac{dw}{dz}=0$$ (equation8_24)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Plugging in equation {eq}`equation25` into {eq}`equation23`, we arrive at"
+    "$$\\frac{d^2u}{dx^2}=-\\frac{d^2v}{dydx}-\\frac{d^2 w}{dz dx}$$ (equation8_25)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\mu(\\frac{\\delta^2u}{\\delta x^2}+\\frac{\\delta^2u}{\\delta y^2}+\\frac{\\delta^2u}{\\delta z^2})$$ (equation26)"
+    "Plugging in equation {eq}`equation8_25` into {eq}`equation8_23`, we arrive at"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\mu(\\frac{\\delta^2u}{\\delta x^2}+\\frac{\\delta^2u}{\\delta y^2}+\\frac{\\delta^2u}{\\delta z^2})$$ (equation8_26)"
    ]
   },
   {
@@ -487,7 +494,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\mu(\\frac{\\delta^2v}{\\delta x^2}+\\frac{\\delta^2v}{\\delta y^2}+\\frac{\\delta^2v}{\\delta z^2})$$ (equation27)"
+    "$$\\mu(\\frac{\\delta^2v}{\\delta x^2}+\\frac{\\delta^2v}{\\delta y^2}+\\frac{\\delta^2v}{\\delta z^2})$$ (equation8_27)"
    ]
   },
   {
@@ -501,7 +508,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\mu(\\frac{\\delta^2w}{\\delta x^2}+\\frac{\\delta^2w}{\\delta y^2}+\\frac{\\delta^2w}{\\delta z^2})$$ (equation28)"
+    "$$\\mu(\\frac{\\delta^2w}{\\delta x^2}+\\frac{\\delta^2w}{\\delta y^2}+\\frac{\\delta^2w}{\\delta z^2})$$ (equation8_28)"
    ]
   },
   {
@@ -529,7 +536,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\frac{p(x)\\delta y - p(x+\\delta x)\\delta y}{\\delta x \\delta y}=-\\frac{[p(x+\\delta x)-p(x)]}{\\delta x}$$ (equation29)"
+    "$$\\frac{p(x)\\delta y - p(x+\\delta x)\\delta y}{\\delta x \\delta y}=-\\frac{[p(x+\\delta x)-p(x)]}{\\delta x}$$ (equation8_29)"
    ]
   },
   {
@@ -543,7 +550,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$-\\frac{\\delta p}{\\delta x}$$ (equation30)"
+    "$$-\\frac{\\delta p}{\\delta x}$$ (equation8_30)"
    ]
   },
   {
@@ -557,14 +564,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$-\\frac{\\delta p}{\\delta y}$$ (equation31)"
+    "$$-\\frac{\\delta p}{\\delta y}$$ (equation8_31)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$-\\frac{\\delta p}{\\delta z}$$ (equation32)"
+    "$$-\\frac{\\delta p}{\\delta z}$$ (equation8_32)"
    ]
   },
   {
@@ -592,14 +599,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$a_x =\\frac{\\text{d}u}{\\text{d}t}=\\frac{\\partial u}{\\partial t}+\\frac{\\partial u}{\\partial x}\\frac{\\partial x}{\\partial t}+\\frac{\\partial u}{\\partial y}\\frac{\\partial y}{\\partial t}+\\frac{\\partial u}{\\partial z}\\frac{\\partial z}{\\partial t}$$(equation33)"
+    "$$a_x =\\frac{\\text{d}u}{\\text{d}t}=\\frac{\\partial u}{\\partial t}+\\frac{\\partial u}{\\partial x}\\frac{\\partial x}{\\partial t}+\\frac{\\partial u}{\\partial y}\\frac{\\partial y}{\\partial t}+\\frac{\\partial u}{\\partial z}\\frac{\\partial z}{\\partial t}$$(equation8_33)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So put all together, we should have understood the Navier-Stoke equation in 3D vector form in {eq}`equation1`."
+    "So put all together, we should have understood the Navier-Stoke equation in 3D vector form in {eq}`equation8_1`."
    ]
   }
  ],
