--- a/notebooks/d_geosciences/Fluid_Dynamics/Lecture8_Part2_SPH_Algorithm_For_Energy_Equation.ipynb
+++ b/notebooks/d_geosciences/Fluid_Dynamics/Lecture8_Part2_SPH_Algorithm_For_Energy_Equation.ipynb
@@ -19,7 +19,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\frac{\\text{d}\\vec{v_i}}{\\text{d}t}=\\vec{g} - \\frac{1}{\\rho_i}\\nabla p + \\frac{\\mu}{\\rho_i} \\nabla^{2}\\vec{v}$$(equation1)"
+    "$$\\frac{\\text{d}\\vec{v_i}}{\\text{d}t}=\\vec{g} - \\frac{1}{\\rho_i}\\nabla p + \\frac{\\mu}{\\rho_i} \\nabla^{2}\\vec{v}$$(equation8_2_1)"
    ]
   },
   {
@@ -33,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Smoothed-particle hydrodynamics (SPH) is a computational method used for simulating the mechanics of continuum media, such as solid mechanics and fluid flows. It can be used to solve the equation {eq}`equation1` for any quantity $Q$ of one particle. It is a meshfree Lagrangian method(where the co-ordinates move with the fluid), and the resolution of the method can easilybe adjusted with respect to variables such as density."
+    "Smoothed-particle hydrodynamics (SPH) is a computational method used for simulating the mechanics of continuum media, such as solid mechanics and fluid flows. It can be used to solve the equation {eq}`equation8_2_1` for any quantity $Q$ of one particle. It is a meshfree Lagrangian method(where the co-ordinates move with the fluid), and the resolution of the method can easilybe adjusted with respect to variables such as density."
    ]
   },
   {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$A_{i}(r_{i})=\\int_{}^{} A(r_{j})W(r_{i}-r_{j},h)dr_{j}\\approx\\sum_{j}A(r_{i})W(r_{i}-r_{j},h)$$(equation2) where $r_{j}$ is the location of a neighboring point and $r_{i}$ is the location of our point; $h$ is the interaction radius, the points that are more than $h$ away will stop interacting with our point."
+    "$$A_{i}(r_{i})=\\int_{}^{} A(r_{j})W(r_{i}-r_{j},h)dr_{j}\\approx\\sum_{j}A(r_{i})W(r_{i}-r_{j},h)$$(equation8_2_2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " where $r_{j}$ is the location of a neighboring point and $r_{i}$ is the location of our point; $h$ is the interaction radius, the points that are more than $h$ away will stop interacting with our point."
    ]
   },
   {
@@ -103,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$A_{i}(r_{i})=\\rho(r_i)\\approx\\sum_{j}\\frac{\\rho(r_{j})}{\\rho(r_j)}W(r_{i}-r_{j},h)m_j\\approx\\sum_{j}W(r_{i}-r_{j},h)m_j$$(equation3)"
+    "$$A_{i}(r_{i})=\\rho(r_i)\\approx\\sum_{j}\\frac{\\rho(r_{j})}{\\rho(r_j)}W(r_{i}-r_{j},h)m_j\\approx\\sum_{j}W(r_{i}-r_{j},h)m_j$$(equation8_2_3)"
    ]
   },
   {
@@ -117,7 +124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\nabla p (r_i)=\\sum \\frac{m_j p_j}{\\rho_j} \\nabla_i W(r_i-r_j,h)$$ (equation4)"
+    "$$\\nabla p (r_i)=\\sum \\frac{m_j p_j}{\\rho_j} \\nabla_i W(r_i-r_j,h)$$ (equation8_2_4)"
    ]
   },
   {
@@ -131,21 +138,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\frac{\\nabla p} {\\rho}=\\nabla( \\frac{p}{\\rho})+\\frac{p}{\\rho^2} \\nabla \\rho$$ (equation5) where $\\nabla(\\frac{p}{\\rho})=\\frac{\\nabla p}{\\rho}+p \\nabla(\\frac{1}{\\rho})$, and $p\\nabla(\\frac{1}{\\rho})=-\\frac{p}{\\rho^2}\\nabla \\rho$."
+    "$$\\frac{\\nabla p} {\\rho}=\\nabla( \\frac{p}{\\rho})+\\frac{p}{\\rho^2} \\nabla \\rho$$ (equation8_2_5)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So instead of the approximation from equation {eq}`equation4`, we could have the following expression by plugging the $\\rho, p, \\nabla p \\&\\nabla \\rho$ into equation {eq}`equation5`, keeping the momentum a constant:"
+    " where $\\nabla(\\frac{p}{\\rho})=\\frac{\\nabla p}{\\rho}+p \\nabla(\\frac{1}{\\rho})$, and $p\\nabla(\\frac{1}{\\rho})=-\\frac{p}{\\rho^2}\\nabla \\rho$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$-\\frac{\\nabla p_i} {\\rho_i}\\approx-\\sum_j m_j (\\frac{p_i}{\\rho_i^2}+\\frac{p_j}{\\rho_j^2})\\nabla_i W(r_i-r_j,h)$$ (equation6) where $W(r_i-r_j,h)\\propto e^{\\frac{-r_{ij}^2}{h^2}}$ (Gaussian Distribution)."
+    "So instead of the approximation from equation {eq}`equation8_2_4`, we could have the following expression by plugging the $\\rho, p, \\nabla p \\&\\nabla \\rho$ into equation {eq}`equation8_2_5`, keeping the momentum a constant:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$-\\frac{\\nabla p_i} {\\rho_i}\\approx-\\sum_j m_j (\\frac{p_i}{\\rho_i^2}+\\frac{p_j}{\\rho_j^2})\\nabla_i W(r_i-r_j,h)$$ (equation8_2_6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " where $W(r_i-r_j,h)\\propto e^{\\frac{-r_{ij}^2}{h^2}}$ (Gaussian Distribution)."
    ]
   },
   {
@@ -159,7 +180,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\frac{\\mu}{\\rho_i} \\nabla^{2}\\vec{v_i}\\approx\\frac{\\mu}{\\rho_i}\\sum_j m_j \\left[\\frac{v_j-v_i}{\\rho_j}\\right]\\nabla^{2}W(r_i-r_j,h)$$ (equation7)"
+    "$$\\frac{\\mu}{\\rho_i} \\nabla^{2}\\vec{v_i}\\approx\\frac{\\mu}{\\rho_i}\\sum_j m_j \\left[\\frac{v_j-v_i}{\\rho_j}\\right]\\nabla^{2}W(r_i-r_j,h)$$ (equation8_2_7)"
    ]
   },
   {
@@ -171,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,14 +364,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$T_{i} \\approx \\sum_{j}(T_j-T_i) k dt \\nabla W(r_i-r_j,h) \\approx \\sum_{j}(T_j-T_i) k dt \\frac{315}{64\\pi h^{9}}(h^{2}-\\parallel r_i - r_j\\parallel^2)^{3}$$(equation8)"
+    "$$T_{i} \\approx \\sum_{j}(T_j-T_i) k dt \\nabla W(r_i-r_j,h) \\approx \\sum_{j}(T_j-T_i) k dt \\frac{315}{64\\pi h^{9}}(h^{2}-\\parallel r_i - r_j\\parallel^2)^{3}$$(equation8_2_8)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\rho_{i} \\approx \\sum_{j} m_{j}\\frac{315}{64\\pi h^{9}}(h^{2}-\\parallel r_i - r_j\\parallel^2)^{3}$$ (equation9)"
+    "$$\\rho_{i} \\approx \\sum_{j} m_{j}\\frac{315}{64\\pi h^{9}}(h^{2}-\\parallel r_i - r_j\\parallel^2)^{3}$$ (equation8_2_9)"
    ]
   },
   {
@@ -364,7 +385,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\rho_{i} = \\rho_{i} \\cdot(1 - \\alpha_v \\cdot (T_i-T_0))$$ (equation9) where $\\alpha_v$ is the thermal expansion coefficient and $T_0$ is the original temperature of that particle $i$."
+    "$$\\rho_{i} = \\rho_{i} \\cdot(1 - \\alpha_v \\cdot (T_i-T_0))$$ (equation8_2_10) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "where $\\alpha_v$ is the thermal expansion coefficient and $T_0$ is the original temperature of that particle $i$."
    ]
   },
   {
@@ -378,12 +406,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$p_i = k(\\rho_i - \\rho_0)T_i$$ (equation9) where $k$ is a constant, $\\rho_0$ is the resting density (density of fluid at equilibrium)"
+    "$$p_i = k(\\rho_i - \\rho_0)T_i$$ (equation8_2_11)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " where $k$ is a constant, $\\rho_0$ is the resting density (density of fluid at equilibrium)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +447,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\frac{\\nabla p_{i}}{p_{i}}\\approx\\sum_j m_{j}\\left[\\frac{p_i}{\\rho_i^{2}}+\\frac{p_j}{\\rho_j^{2}}\\right]\\frac{-45}{\\pi h^{6}}(h-\\parallel r_i - r_j\\parallel)^2\\frac{r_i-r_j}{\\parallel r_i - r_j\\parallel}$$ (equation10)"
+    "$$\\frac{\\nabla p_{i}}{p_{i}}\\approx\\sum_j m_{j}\\left[\\frac{p_i}{\\rho_i^{2}}+\\frac{p_j}{\\rho_j^{2}}\\right]\\frac{-45}{\\pi h^{6}}(h-\\parallel r_i - r_j\\parallel)^2\\frac{r_i-r_j}{\\parallel r_i - r_j\\parallel}$$ (equation8_2_12)"
    ]
   },
   {
@@ -426,19 +461,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\frac{\\mu}{\\rho_i} \\nabla^{2}\\vec{v_i}\\approx\\frac{\\mu}{\\rho_i}\\sum_j m_j \\left[\\frac{v_j-v_i}{\\rho_j}\\right]\\frac{45}{\\pi h^{6}}(h-\\parallel r_i - r_j\\parallel)$$ (equation11)"
+    "$$\\frac{\\mu}{\\rho_i} \\nabla^{2}\\vec{v_i}\\approx\\frac{\\mu}{\\rho_i}\\sum_j m_j \\left[\\frac{v_j-v_i}{\\rho_j}\\right]\\frac{45}{\\pi h^{6}}(h-\\parallel r_i - r_j\\parallel)$$ (equation8_2_13)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After equation {eq}`equation8` to {eq}`equation11` are computed, we can put them together into N-S equation to obtain acceleration."
+    "After equation {eq}`equation8_2_10` to {eq}`equation8_2_13` are computed, we can put them together into N-S equation to obtain acceleration."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +625,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7ef858623c414557afddc37372d61873",
+       "model_id": "df386ff4caf24efb924107b8105f7eed",
        "version_major": 2,
        "version_minor": 0
       },
@@ -619,7 +654,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start iterating\n",
+      "start updating\n"
+     ]
+    }
+   ],
    "source": [
     "# Run this code to update the mantle convection\n",
     "TotalTime = 1000\n",
@@ -642,7 +686,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='img/mantle_convection_thermal.PNG' width=600>\n",
+    "<img src='img/mantle_convection_thermal.PNG' width=600>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
     "Figure 1: Two-dimensional cellular convection in a fluid layer heated from below simulation shows similar character as the figure 6.38 in the book called $Geodynamics$,[Turcotte_D.L.,_Schubert_G.]."
    ]
   },
@@ -659,18 +710,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.7"
   }
  },
  "nbformat": 4,
