--- a/notebooks/d_geosciences/Fluid_Dynamics/Lecture7_Pipe_Flow_with_Heat.ipynb
+++ b/notebooks/d_geosciences/Fluid_Dynamics/Lecture7_Pipe_Flow_with_Heat.ipynb
@@ -218,7 +218,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='img/P626_5.PNG' width = 700>\n",
+    "<img src='img/P626_5.PNG' width = 700>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
     "Figure 8.3: Thickness of the channel $h$ is also represented by $d$ since $h$ is used as heat transfer coefficient later."
    ]
   },
@@ -429,7 +436,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$q_{x}=h(\\bar{T}-T_w)=h\\bar{\\theta}$$(equation19) where the overbar represents an average over the cross section of the channel."
+    "$$q_{x}=h(\\bar{T}-T_w)=h\\bar{\\theta}$$(equation19) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "where the overbar represents an average over the cross section of the channel."
    ]
   },
   {
