--- a/notebooks/d_geosciences/Fluid_Dynamics/Lecture8_Part2_SPH_Algorithm_For_Energy_Equation.ipynb
+++ b/notebooks/d_geosciences/Fluid_Dynamics/Lecture8_Part2_SPH_Algorithm_For_Energy_Equation.ipynb
@@ -662,6 +662,23 @@
       "start iterating\n",
       "start updating\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\JianouJiang\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:12: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  if sys.path[0] == '':\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iterations\n",
+      "0\n",
+      "start updating\n"
+     ]
     }
    ],
    "source": [
