deploy: ac8ca44c18e584e3dfbb7ba1981677f8fa6ade56

--- a/_sources/d_geosciences/Fluid_Dynamics/Lecture8_Part2_SPH_Algorithm_For_Energy_Equation.ipynb
+++ b/_sources/d_geosciences/Fluid_Dynamics/Lecture8_Part2_SPH_Algorithm_For_Energy_Equation.ipynb
@@ -677,6 +677,26 @@
      "text": [
       "iterations\n",
       "0\n",
+      "start updating\n",
+      "iterations\n",
+      "1\n",
+      "start updating\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\JianouJiang\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:4: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  after removing the cwd from sys.path.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iterations\n",
+      "2\n",
       "start updating\n"
      ]
     }
