--- a/notebooks/d_geosciences/Fluid_Dynamics/Lecture8_Part2_SPH_Algorithm_For_Energy_Equation.ipynb
+++ b/notebooks/d_geosciences/Fluid_Dynamics/Lecture8_Part2_SPH_Algorithm_For_Energy_Equation.ipynb
@@ -697,6 +697,21 @@
      "text": [
       "iterations\n",
       "2\n",
+      "start updating\n",
+      "iterations\n",
+      "3\n",
+      "start updating\n",
+      "iterations\n",
+      "4\n",
+      "start updating\n",
+      "iterations\n",
+      "5\n",
+      "start updating\n",
+      "iterations\n",
+      "6\n",
+      "start updating\n",
+      "iterations\n",
+      "7\n",
       "start updating\n"
      ]
     }
