deploy: 1d5450b983cf91e337e5f1916b443390a805bbf7

--- a/_sources/e_extra/pytorch_image_filtering_ml/Chapter 0 -- Introduction.ipynb
+++ b/_sources/e_extra/pytorch_image_filtering_ml/Chapter 0 -- Introduction.ipynb
@@ -202,12 +202,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}  output = \\begin{cases} \n",
+    "$$  output = \\begin{cases} \n",
     "      0 & if \\; \\sum_i w_i x_i \\leq threshold \\\\\n",
     "      1 & if \\; \\sum_i w_i x_i > threshold\n",
     "      \\label{segment_eq}\n",
     "   \\end{cases}\n",
-    "\\end{equation}"
+    "$$ (eq0_1)"
    ]
   },
   {
@@ -329,9 +329,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "w_1 x_1 + w_2 x_2 + b = 0\n",
-    "\\end{equation}"
+    "$$ (eq0_2)"
    ]
   },
   {
@@ -359,9 +359,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "w_1 x_1 + w_2 x_2 + b < 0\n",
-    "\\end{equation}"
+    "$$ (eq0_3)"
    ]
   },
   {
@@ -375,9 +375,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "w_1 x_1 + w_2 x_2 + b < 0\n",
-    "\\end{equation}"
+    "$$ (eq0_4)"
    ]
   },
   {
@@ -391,27 +391,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "h(\\vec{x}) = w_1 x_1 + w_2 x_2 + ... + b\n",
-    "\\end{equation}"
+    "$$ (eq0_5)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To summarize his admission result, we can have the following equation (which is the same as equation \\ref{segment_eq})."
+    "To summarize his admission result, we can have the following equation (which is the same as equation {eq}`eq0_1`)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}  \\hat{y} = \\begin{cases} \n",
+    "$$  \\hat{y} = \\begin{cases} \n",
     "      0 & if \\; h(\\vec{x}) \\leq 0 \\\\\n",
     "      1 & if \\; h(\\vec{x})  > 0\n",
     "   \\end{cases}\n",
-    "\\end{equation}"
+    "$$ (eq0_6)"
    ]
   }
  ],
