--- a/notebooks/a_modules/intro.ipynb
+++ b/notebooks/a_modules/intro.ipynb
@@ -132,7 +132,7 @@
     "[<!-- module-geodyn badge --><span class=\"module module-geodyn\">Geodynamics</span>](module-geodyn)\n",
     "\n",
     "- {doc}`1D heat conduction (layered medium) <notebooks\\geosciences\\1D_Heat_Conduction.ipynb>`\n",
-    "\n"
+    "- {doc}`1D pipe flow <notebooks\\geosciences\\Lecture5_1D_Pipe_Flow.ipynb>`\n"
    ]
   },
   {
@@ -159,7 +159,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
