--- a/notebooks/d_geosciences/Fluid_Dynamics/Lecture8_Part1_Navier_Stoke_Equation.ipynb
+++ b/notebooks/d_geosciences/Fluid_Dynamics/Lecture8_Part1_Navier_Stoke_Equation.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(Lecture8_Part1_Navier_Stoke_Equation) =\n",
-    "## Lecture8_Part1_Navier_Stoke_Equation"
+    "(Lecture8_Part1_Navier_Stoke_Equation)=\n",
+    "# Lecture8_Part1_Navier_Stoke_Equation"
    ]
   },
   {
