--- a/_sources/d_geosciences/Fluid_Dynamics/Lecture5_1D_Pipe_Flow.ipynb
+++ b/_sources/d_geosciences/Fluid_Dynamics/Lecture5_1D_Pipe_Flow.ipynb
@@ -64,7 +64,7 @@
    "metadata": {},
    "source": [
     "<img src=\"img/F61.PNG\" width=\"500\">\n",
-    "<center> Figure 6.1: (a) The force balance on a layer of ﬂuid in a channel with an applied pressure gradient. (b) A typical velocity proﬁle.\n"
+    "Figure 6.1: (a) The force balance on a layer of ﬂuid in a channel with an applied pressure gradient. (b) A typical velocity proﬁle."
    ]
   },
   {
@@ -377,7 +377,7 @@
    "metadata": {},
    "source": [
     "<img src=\"img/F62.PNG\" width=\"500\">\n",
-    "<center> Figure 6.3: Unidirectional ﬂow of a constant thickness layer of viscous ﬂuid down an inclined plane."
+    "Figure 6.3: Unidirectional ﬂow of a constant thickness layer of viscous ﬂuid down an inclined plane."
    ]
   },
   {
@@ -598,7 +598,7 @@
    "metadata": {},
    "source": [
     "<img src=\"img/F66.PNG\" width=\"600\">\n",
-    "<center> Figure 6.6: Poiseuille ﬂow through a circular pipe."
+    "Figure 6.6: Poiseuille ﬂow through a circular pipe."
    ]
   },
   {
@@ -845,7 +845,7 @@
    "metadata": {},
    "source": [
     "<img src=\"img/F69.PNG\" width=\"400\">\n",
-    "<center> Figure 6.9: A semicircular aquifer with a circular cross section (a toroid). A hydrostatic head b is available to drive the ﬂow.\n"
+    "Figure 6.9: A semicircular aquifer with a circular cross section (a toroid). A hydrostatic head b is available to drive the ﬂow.\n"
    ]
   },
   {
@@ -948,7 +948,7 @@
    "metadata": {},
    "source": [
     "<img src=\"img/Rising_Magma1.PNG\" width=\"500\">\n",
-    "<center> Figure 6.10"
+    "Figure 6.10"
    ]
   },
   {
