deploy: b1fc76fb58985d806ec4e119e5c0fe49a206cb57

--- a/_sources/e_extra/pytorch_image_filtering_ml/Chapter 0 -- Introduction.ipynb
+++ b/_sources/e_extra/pytorch_image_filtering_ml/Chapter 0 -- Introduction.ipynb
@@ -315,7 +315,7 @@
    "metadata": {},
    "source": [
     "<img src=\"images/SAT_GPA.PNG\"/>\n",
-    "<center>Figure 1.1:  Visualisation of SAT and GPA; the red dot representsyvalue being Y and bluetriangle meansyvalue being N."
+    "Figure 1.1:  Visualisation of SAT and GPA; the red dot representsyvalue being Y and bluetriangle meansyvalue being N."
    ]
   },
   {
