--- a/notebooks/e_extra/pytorch_image_filtering_ml/Chapter 0 -- Introduction.ipynb
+++ b/notebooks/e_extra/pytorch_image_filtering_ml/Chapter 0 -- Introduction.ipynb
@@ -315,7 +315,7 @@
    "metadata": {},
    "source": [
     "<img src=\"images/SAT_GPA.PNG\"/>\n",
-    "<center>Figure 1.1:  Visualisation of SAT and GPA; the red dot representsyvalue being Y and bluetriangle meansyvalue being N."
+    "Figure 1.1:  Visualisation of SAT and GPA; the red dot representsyvalue being Y and bluetriangle meansyvalue being N."
    ]
   },
   {
