--- a/notebooks/e_extra/pytorch_image_filtering_ml/Chapter 1 -- Neural Network.ipynb
+++ b/notebooks/e_extra/pytorch_image_filtering_ml/Chapter 1 -- Neural Network.ipynb
@@ -57,7 +57,7 @@
    "metadata": {},
    "source": [
     "<img src=\"images/advanced_NeuralNetwork.PNG\">\n",
-    "<center>Figure 1.2:  Multilayer Perceptrons"
+    "Figure 1.1:  Multilayer Perceptrons"
    ]
   },
   {
@@ -86,7 +86,7 @@
    "metadata": {},
    "source": [
     "<img src=\"images/discretePerceptron.PNG\" width=\"600\">\n",
-    "<center>Figure 1.3:  Discrete Perceptron"
+    "<center>Figure 1.2:  Discrete Perceptron"
    ]
   },
   {
@@ -100,9 +100,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "h(\\vec{x}) = w_1*x_1 + w_2*x_2+ w_3 * x_3 + 1*b\n",
-    "\\end{equation}"
+    "$$ (eq1_1)"
    ]
   },
   {
@@ -144,9 +144,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "\\sigma (z) = \\frac{1}{1+e^{-z}}\n",
-    "\\end{equation}"
+    "$$ (eq1_2)"
    ]
   },
   {
@@ -284,9 +284,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     " \\frac{1}{1+exp(-\\sum_i w_i x_i -b)}\n",
-    "\\end{equation}"
+    "$$ (eq1_3)"
    ]
   },
   {
@@ -308,9 +308,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     " \\Delta output \\approx \\sum_i \\frac{\\delta output}{\\delta w_i} \\Delta w_i +\\frac{\\delta output}{\\delta b_i} \\Delta b_i\n",
-    "\\end{equation}"
+    "$$ (eq1_4)"
    ]
   },
   {
@@ -318,7 +318,7 @@
    "metadata": {},
    "source": [
     "<img src=\"images/discreteVsQuantify.PNG\" width=\"600\">\n",
-    "<center>Figure 1.6:  Discrete vs. Quantify Perceptron"
+    "Figure 1.3:  Discrete vs. Quantify Perceptron"
    ]
   }
  ],
