deploy: cf47bb52e0e72ef09506cc35b86821dc78c7956b

--- a/_sources/e_extra/pytorch_image_filtering_ml/Chapter 1 -- Neural Network.ipynb
+++ b/_sources/e_extra/pytorch_image_filtering_ml/Chapter 1 -- Neural Network.ipynb
@@ -86,7 +86,7 @@
    "metadata": {},
    "source": [
     "<img src=\"images/discretePerceptron.PNG\" width=\"600\">\n",
-    "<center>Figure 1.2:  Discrete Perceptron"
+    "Figure 1.2:  Discrete Perceptron"
    ]
   },
   {
