deploy: 5c5aadf26826f9ce66b2643163d78df43d5efccf

--- a/_sources/e_extra/pytorch_image_filtering_ml/Chapter 6 -- Gradient Descent 2.ipynb
+++ b/_sources/e_extra/pytorch_image_filtering_ml/Chapter 6 -- Gradient Descent 2.ipynb
@@ -20,16 +20,16 @@
    "metadata": {},
    "source": [
     "<img src = \"images/neural1.PNG\" width=\"400\">\n",
-    "<center>Figure 1.7:  Two layer neural network."
+    "Figure 1.7:  Two layer neural network."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "-\\frac{\\delta C(\\vec{w},b)}{w_1} = \\frac{1}{m} \\frac{\\delta}{\\delta w_1} [\\sum_{i=1}^m [y_i*ln(\\sigma(\\vec{w}*\\vec{x}+b))]+(1-y_i)*ln(1-\\sigma(\\vec{w}+b))]\n",
-    "\\end{equation}"
+    "$$ (eq6_1)"
    ]
   },
   {
@@ -43,27 +43,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "y_i * \\frac{\\delta}{\\delta w_1} ln[\\sigma(\\vec{w}*\\vec{x}+b)] + (1-y_i) *\\frac{\\delta}{\\delta w_1} ln[1-\\sigma(\\vec{w}*\\vec{x}+b)]\n",
     "\\label{differential equation}\n",
-    "\\end{equation}"
+    "$$ (eq6_2)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's look at the first term in the equation \\ref{differential equation}:"
+    "Let's look at the first term in the equation {eq}`eq6_2`:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "y_i *\\frac{\\delta}{\\delta w_1} ln[\\sigma(\\vec{w}*\\vec{x}+b)]\n",
     "\\label{first term}\n",
-    "\\end{equation}"
+    "$$ (eq6_3)"
    ]
   },
   {
@@ -77,9 +77,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "ln(u) \\; \\; \\; u = \\sigma(h) \\; \\; \\; h = \\vec{w}*\\vec{x}+b\n",
-    "\\end{equation}"
+    "$$ (eq6_4)"
    ]
   },
   {
@@ -93,53 +93,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "\\frac{\\delta ln(u)}{\\delta w_1} = \\frac{\\delta ln(u)}{\\delta u} \\frac{\\delta u}{\\delta h} \\frac{\\delta h}{\\delta w_1}\n",
     "\\label{chain rule}\n",
-    "\\end{equation}"
+    "$$ (eq6_5)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "\\frac{\\delta h}{\\delta w_1} = \\frac{\\delta}{\\delta w_1}(w_1x_1 + w_2x_2 +b) = x_1\n",
-    "\\end{equation}"
+    "$$ (eq6_6)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "\\frac{\\delta u}{\\delta h} = \\frac{\\delta}{\\delta h}(\\frac{1}{1+e^{-h}}) = \\frac{1}{1+e^{-h}}*\\frac{e^{-h}}{1+e^{-h}} = \\sigma(h)*(1-\\sigma(h))\n",
-    "\\end{equation}"
+    "$$ (eq6_7)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "\\frac{\\delta ln(u)}{\\delta u} = \\frac{1}{u}\n",
-    "\\end{equation}"
+    "$$ (eq6_8)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So the equation \\ref{first term} becomes"
+    "So the equation {eq}`eq6_3` becomes"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "y_i * \\frac{\\delta}{\\delta w_1} ln[\\sigma(\\vec{w}*\\vec{x}+b)] =y_i* \\frac{1}{\\hat{y}} *\\hat{y}(1-\\hat{y})*x_1 = y_i*(1-\\hat{y})*x_1\n",
-    "\\end{equation}"
+    "$$ (eq6_9)"
    ]
   },
   {
@@ -153,16 +153,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Similarly, we can do the same for the second term in equation \\ref{differential equation} and have the combined result as follow"
+    "Similarly, we can do the same for the second term in equation {eq}`eq6_2` and have the combined result as follow"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "\\frac{\\delta C}{\\delta w_1} =  y_i*(1-\\hat{y_i})*x_1 + (1-y_i) \\hat{y_i}*x_1 = (y_i - \\hat{y_i})*x_1\n",
-    "\\end{equation}"
+    "$$ (eq6_10)"
    ]
   },
   {
@@ -176,10 +176,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "\\frac{\\delta C}{\\delta w_1} = \\frac{1}{m}\\sum_{i=1}^m y_i*(1-\\hat{y_i})*x_1 + (1-y_i) \\hat{y_i}*x_1 =\\frac{1}{m}\\sum_{i=1}^m (y_i - \\hat{y_i})*x_1\n",
     "\\label{gradient of cost function}\n",
-    "\\end{equation}"
+    "$$ (eq6_11)"
    ]
   },
   {
@@ -193,16 +193,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Anyway, in order to update the weight $w_i$ as derived earlier in the previous chapter in equation 6, we just need to plug in $\\frac{\\delta C}{\\delta w_i}$, which we just obtained."
+    "Anyway, in order to update the weight $w_i$ as derived earlier in the previous chapter in equation {eq}`eq5_5`, we just need to plug in $\\frac{\\delta C}{\\delta w_i}$, which we just obtained."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "w_i^{'} = w_i - \\eta \\nabla C = w_i - \\eta \\frac{\\delta C}{\\delta w_i} =  w_i - \\eta \\frac{1}{m}\\sum_{i=1}^m (y_i - \\hat{y_i})*x_1\n",
-    "\\end{equation}`"
+    "$$ (eq6_12)"
    ]
   },
   {
@@ -216,9 +216,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "b_i^{'} = b_i -\\eta \\frac{1}{m}\\sum_{i=1}^m(y_i-\\hat{y_i})\n",
-    "\\end{equation}"
+    "$$ (eq6_13)"
    ]
   }
  ],
