--- a/_sources/e_extra/pytorch_image_filtering_ml/Chapter 5 -- Gradient Descent 1.ipynb
+++ b/_sources/e_extra/pytorch_image_filtering_ml/Chapter 5 -- Gradient Descent 1.ipynb
@@ -12,7 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In multi-variable calculus (recommend video in Khan Academy:\\newline https://www.youtube.com/watch?v=TrcCbdWwCBc&list=PLSQl0a2vh4HC5feHa6Rc5c0wbRTx56nF7), the gradient is defined by unit vector nabla:"
+    "In multi-variable calculus (recommend video in Khan Academy: https://www.youtube.com/watch?v=TrcCbdWwCBc&list=PLSQl0a2vh4HC5feHa6Rc5c0wbRTx56nF7), the gradient is defined by unit vector nabla:"
    ]
   },
   {
@@ -120,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then equation above tells us that $\\Delta C \\approx −\\nabla C *\\eta \\nabla C=−\\eta ||C||^2$. Because $||C||^2 >=0$, this guarantees that $\\Delta C<=0$, i.e., C will always decrease, never increase, if we change $w$ according to the prescription in the equation above. This is exactly the property we wanted! We'll use this property to compute a value for $\\delta w$, then move the position $w$ by that amount:"
+    "Then equation above tells us that $\\Delta C \\approx −\\nabla C *\\eta \\nabla C=−\\eta ||C||^2$. Because $||C||^2 >=0$, this guarantees that $\\Delta C<=0$, i.e., $C$ will always decrease, never increase, if we change $w$ according to the prescription in the equation above. This is exactly the property we wanted! We'll use this property to compute a value for $\\delta w$, then move the position $w$ by that amount:"
    ]
   },
   {
