deploy: c4bc653db07ff07269b968a033f1d14c9faaf74e

--- a/_sources/e_extra/pytorch_image_filtering_ml/Chapter 7 -- Real (Non-linear) Neural Network.ipynb
+++ b/_sources/e_extra/pytorch_image_filtering_ml/Chapter 7 -- Real (Non-linear) Neural Network.ipynb
@@ -12,7 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So in the previous example, we derived the gradients for a two layers neural network. This is to find the straight line that bisects the two groups in figure 1.1 in the introduction. However, in reality, we often have the following groups:"
+    "So in the previous example, we derived the gradients for a two layers neural network. This is to find the straight line that bisects the two groups in figure 7.1 in the introduction. However, in reality, we often have the following groups:"
    ]
   },
   {
@@ -20,7 +20,7 @@
    "metadata": {},
    "source": [
     "<img src=\"images/groups.PNG\" width=\"400\">\n",
-    "<center>Figure 1.8"
+    "Figure 7.1"
    ]
   },
   {
@@ -35,7 +35,7 @@
    "metadata": {},
    "source": [
     "<img src=\"images/groups1.PNG\" width=\"500\">\n",
-    "<center>Figure 1.9"
+    "Figure 7.2"
    ]
   },
   {
@@ -50,7 +50,7 @@
    "metadata": {},
    "source": [
     "<img src=\"images/threeLayers.PNG\" width=\"500\">\n",
-    "<center>Figure 1.10"
+    "Figure 7.3"
    ]
   },
   {
@@ -58,7 +58,7 @@
    "metadata": {},
    "source": [
     "<img src=\"images/threeLayers1.PNG\" width=\"400\">\n",
-    "<center>Figure 1.11"
+    "Figure 7.4"
    ]
   },
   {
@@ -72,9 +72,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "w_{ab}^{(n)}\n",
-    "\\end{equation}"
+    "$$ (eq7_1)"
    ]
   },
   {
@@ -89,21 +89,21 @@
    "metadata": {},
    "source": [
     "<img src=\"images/bpg.PNG\" width=\"400\">\n",
-    "<center>Figure 1.12"
+    "Figure 7.5"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For example, the weights in the input layer in the figure 1.11 can be defined as follow"
+    "For example, the weights in the input layer in the figure 7.4 can be defined as follow"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "W^{(1)}= \\begin{bmatrix}\n",
     "w^{(1)}_{11} & w^{(1)}_{21} \\\\\n",
     "w^{(1)}_{12} & w^{(1)}_{22} \\\\\n",
@@ -114,7 +114,7 @@
     "-2 & -3 \\\\\n",
     "-8 & 1\n",
     "\\end{bmatrix} \n",
-    "\\end{equation}"
+    "$$ (eq7_2)"
    ]
   },
   {
@@ -128,7 +128,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "W^{(2)}= \\begin{bmatrix}\n",
     "w^{(2)}_{11}  \\\\\n",
     "w^{(2)}_{12}  \\\\\n",
@@ -139,7 +139,7 @@
     "5 \\\\\n",
     "-6\n",
     "\\end{bmatrix} \n",
-    "\\end{equation}"
+    "$$ (eq7_3)"
    ]
   },
   {
@@ -201,9 +201,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
+    "$$\n",
     "a^{'}=\\sigma(wa+b)\n",
-    "\\end{equation}"
+    "$$ (eq7_4)"
    ]
   },
   {
